# py_algo

./: README.md  pyproject.toml
src/: array.py  array_algs.py  main.py
tests/: tests.py
