[project]
name = "py-algo"
version = "0.1.0"
description = "algorithms written in python"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "poethepoet (>=0.45.0,<0.46.0)",
    "pytest-check (>=2.8.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini.option]
pythonpath = ["."]

[tool.poe.tasks]
test = "pytest -v -rA ./tests/tests.py"